--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
-.range-btn {
-    padding: 0.25rem 1rem;
-    font-size: 0.9rem;
+
+#range-btn {
+    padding: 0.5rem 1.5rem;
+    font-size: 1rem;
+    letter-spacing: 0.75px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 1.5rem 0.25rem 1rem 0.25rem;
-    border-radius: 4px;
+    border-radius: 6px;
     border: 1.5px solid black;
 }
 
@@ -18,16 +21,25 @@ p {
     -webkit-text-fill-color: transparent;
 }
 
+#section-grayscale {
+    margin: 0;
+    padding: 0;
+}
+
 .grayscale-ranges {
     float: left;
     margin: 1rem 0 1rem 1rem;
     width: 5rem;
     height: 5rem;
     border-radius: 5rem;
+    border: 3px solid black;
 }
 
 body {
+
     background-color: rgb(135, 246, 211);
     text-align: center;
     font-family: 'Lucida Sans', sans-serif;
+    margin-top: .5rem;
+    padding: 0 1rem;
 }
