--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,20 @@
-
-#range-btn {
-    padding: 0.5rem 1.5rem;
-    font-size: 1rem;
-    letter-spacing: 0.75px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin: 1.5rem 0.25rem 1rem 0.25rem;
-    border-radius: 6px;
-    border: 1.5px solid black;
+::-webkit-scrollbar {
+    display: none;
 }
 
-p {
+.grayscale-colour p {
     text-align: center;
     font-size: x-large;
     font-family: 'Courier New', Courier, monospace;
 }
 
 .title {
-    background-image: repeating-linear-gradient(25deg, #1c1c1c, #797979, #1c1c1c);
+    background-image: repeating-linear-gradient(
+        25deg,
+        #1c1c1c,
+        #797979,
+        #1c1c1c
+    );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -26,9 +24,9 @@ p {
     padding: 0;
 }
 
-.grayscale-ranges {
+.grayscale-colour {
     float: left;
-    margin: 1rem 0 1rem 1rem;
+    margin: 1rem 1rem 1rem 1rem;
     width: 5rem;
     height: 5rem;
     border-radius: 5rem;
@@ -36,10 +34,9 @@ p {
 }
 
 body {
-
-    background-color: rgb(135, 246, 211);
+    background-color: #FEFBEF;
     text-align: center;
     font-family: 'Lucida Sans', sans-serif;
-    margin-top: .5rem;
     padding: 0 1rem;
+    margin: 0;
 }
